[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaclipy-tools"
description = 'This is a collection of wrappers around common system tools that works well with yaclipy.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Aaron", email = "aaron@framelunch.jp" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["yaclipy", "print-ext"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/yaclipy-tools#readme"
Issues = "https://github.com/unknown/yaclipy-tools/issues"
Source = "https://github.com/unknown/yaclipy-tools"

[tool.hatch.version]
path = "src/yaclipy_tools/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/yaclipy_tools --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/yaclipy_tools/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/print_ext"]
